monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4059/A4059a.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4059;

grammar A4059a {

  A = token("b-") ;

}
